# stealth-browser-mcp

./: .gitignore  README.md  pyproject.toml  setup.sh
src/stealth_browser/: __init__.py  __main__.py  browser_manager.py  config.py  dom_extractor.py  extractor.py  persistence.py  proxy.py  security.py  server.py  session.py  x_extract.py  x_report.py  x_research.py
tests/: test_dom_extractor.py  test_extractor.py  test_persistence.py  test_security.py  test_server_helpers.py  test_x_extract.py  test_x_pagination.py  test_x_report.py  test_x_research.py  test_x_thread.py
